# tkinter-boilerplate

./: README.md  pyproject.toml
src/constants/: messages.py
src/services/: auth_service.py
src/ui/: interface_app.py
src/ui/views/: main_view.py
src/utils/: dialogs.py  error_handler.py
test/test_constants/: test_messages.py
test/test_services/: test_auth_service.py
test/test_utils/: test_dialogs.py
tests/: conftest.py
tests/test_ui/test_views/: test_main_view.py
